<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Survivor: The Clean City</string>
    <string name="real_mode">Real Mode</string>
    <string name="virtual_mode">Virtual Mode</string>
    <string name="quiz_mode">Quiz Mode</string>
    <string name="settings_title">Settings</string>

<string name="calibrate_instructions">Click here to Calibrate</string>

<!-- Highscore menu -->


<string name="highscore_title">HighScores</string>

<!-- Instructions before game starts -->


<string name="instructions">Just tilt your device to move plane and catch the degrees. Keep away from exams!</string>

<string name="instructions_continue">Click to Continue</string>

<!-- Game over screen -->


<string name="game_over">Game Over</string>

<string name="game_over_continue">Click to Continue</string>

<!-- During Game Play -->


<string name="Prepare">Ready</string>

<string name="Pause">Paused</string>

<!-- Enter your Highscore screen -->


<string name="Enter_highscore_title">You have a Highscore</string>

<string name="Enter_highscore_comment">Congratulations! Enter your name</string>

<string name="Save_highscore">Save</string>

<string name="Highscore_hint">Your Name</string>

<string name="highscore_facts">Seek out alternatives to the plastic items that you rely on. </string>
</resources>
